[gd_scene load_steps=2 format=3 uid="uid://b2krhq43q3awp"]

[ext_resource type="Script" path="res://resources/components/DashComponent.gd" id="1_oj748"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_oj748")

[node name="RefillTimer" type="Timer" parent="."]

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
